--- a/pom.xml
+++ b/pom.xml
@@ -219,6 +219,8 @@
 					<compilerArgument>-Xlint:all</compilerArgument>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
+                    <encoding>UTF-8</encoding>
+
 				</configuration>
 			</plugin>
 			<plugin>
