--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,12 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- MYSQL Connector -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -167,6 +173,19 @@
 			<version>1.18.6</version>
 			<scope>provided</scope>
 		</dependency>
+    <!-- Apache Commons FileUpload -->
+    <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3.2</version>
+    </dependency>
+
+    <!-- Apache Commons IO -->
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.5</version>
+    </dependency>
 	</dependencies>
 	<build>
 		<plugins>
